--- a/Go_Team00/src/ex03/client/config/client.conf
+++ b/Go_Team00/src/ex03/client/config/client.conf
@@ -1,8 +1,11 @@
 {
-    "postgres":
+    "host": "0.0.0.0",
+    "port": "7777",
+    "postgres": {
         "user":     "MGomed",
         "password": "1111",
         "host":     "localhost",
         "port":     "5432",
         "dbname":   "anomaly"
+    }
 }
