--- a/Go_Team00/src/ex03/client/config/client.conf
+++ b/Go_Team00/src/ex03/client/config/client.conf
@@ -7,5 +7,7 @@
         "host":     "localhost",
         "port":     "5432",
         "dbname":   "anomaly"
-    }
+    },
+    "max": 100,
+    "k": 3
 }
